[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/tiger_turret.png" type="Texture" id=1]
[ext_resource path="res://sprites/tiger_body.png" type="Texture" id=2]
[ext_resource path="res://prefabs/Tank.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Enemy Tiger.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 117.8, 70.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 84.0949, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 398.847

[node name="Tank" groups=["targetable"] instance=ExtResource( 3 )]
collision_mask = 14
script = ExtResource( 4 )
speed = 150
rotationSpeed = 1.0
gunCooldown = 0.4
health = 100
turretSpeed = 1.0
detectRadius = 500

[node name="Body" parent="." index="0"]
texture = ExtResource( 2 )

[node name="bodyCol" parent="." index="1"]
position = Vector2( 1.74393, 3.8147e-06 )
shape = SubResource( 1 )

[node name="Turret" parent="." index="3"]
texture = ExtResource( 1 )

[node name="turrCol" parent="Turret" index="1"]
position = Vector2( 149.577, 0 )
shape = SubResource( 4 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
